--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -3,23 +3,45 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Hello Ionic</ion-title>
+    <ion-title>
+      <div class="title">
+        <span>Jimmy</span><br/>
+        <span>欢迎来到</span>
+      </div>
+    </ion-title>
+    <ion-buttons end>
+      <button ion-button>
+        <ion-icon name="settings"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-
-  <h3>Welcome to your first Ionic app!</h3>
-
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
-  <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
-
+  <!--<h2>Expense List</h2>-->
+  <ion-list>
+    <ion-item-sliding *ngFor="let user of userinfo; let i=index">
+      <ion-item>
+        <ion-avatar item-start>
+          {{i}}
+        </ion-avatar>
+        <h2>{{user.product_id}}</h2>
+        <h3>{{user.material_id}}</h3>
+        <p>{{user.weight}}克</p>
+      </ion-item>
+    </ion-item-sliding>
+  </ion-list>
+  <!-- <ion-infinite-scroll (ionInfinite)="loadMoreRepos($event)" *ngIf="hasMore">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="loading..."
+    ></ion-infinite-scroll-content>
+  </ion-infinite-scroll> -->
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <!-- <ion-title>已经加载了：{{userinfo.length}} </ion-title> -->
+    <ion-title>总共：{{total}} 条</ion-title>
+  </ion-toolbar>
+</ion-footer>
