--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-buttons start>
-      <button ion-button icon-only (click)="goHomeMenuPage()">
+      <button tappable ion-button icon-only (click)="goHomeMenuPage()">
         <ion-icon name="menu"></ion-icon>
       </button>
     </ion-buttons>
@@ -12,7 +12,7 @@
       </div>
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="goSettingPage()" >
+      <button tappable ion-button icon-only (click)="goSettingPage()" >
         <ion-icon name="settings">
         </ion-icon>
       </button>
