--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -15,7 +15,7 @@
     <button class="inner-list"  ion-item (click)="openPage('homePage')">
       立即预定
     </button>
-    <button class="inner-list"  ion-item (click)="openPage('listPage')">
+    <button class="inner-list"  ion-item (click)="openPage('weekMenu')">
       一周菜单
     </button>
     <button class="inner-list last-item"  ion-item (click)="openPage('listPage')">
