--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -4,15 +4,49 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
 
   <ion-navbar>
-    <ion-title>detail</ion-title>
+    <ion-title>详情</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
+  <ion-card>
+    <img src="{{item.img}}"/>
+    <ion-card-content>
+      <ion-card-title>
+        {{item.name}}
+      </ion-card-title>
+      <p>
+        ￥ 6.0元/份
+      </p>
+      <p>
+        套餐包括：
+      </p>
+      <p>
+        豆腐，青菜，酱油，米饭，鸡肉，菜干汤,豆腐，青菜，酱油，米饭，鸡肉，菜干汤,豆腐，青菜，酱油，米饭，鸡肉，菜干汤,豆腐，青菜，酱油，米饭，鸡肉，菜干汤,
+      </p>
+      <p>
+        <ion-badge>150g</ion-badge>
+        <ion-badge>低脂</ion-badge>
+        <ion-badge>高纤维</ion-badge>
+        <ion-badge>中辣</ion-badge>
+      </p>
+    </ion-card-content>
+  </ion-card>
 
+  <ion-card>
+    <ion-card-header>
+      套餐特色
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        保留川香得麻辣特点，结合营养搭配，不失地方菜系特点同时能控制能量，满足你对营养/地方美食的双重体验。
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <button class="order-btn">预定</button>
 </ion-content>
