--- a/src/pages/week-menu-type/week-menu-type.html
+++ b/src/pages/week-menu-type/week-menu-type.html
@@ -13,8 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
-  <span style="font-size: 1.5rem;font-weight: bold">{{item?.date}}</span>
+<ion-content>
+  <span style="font-size: 1.5rem;font-weight: bold;padding: 16px">{{item?.date}}</span>
 
   <ion-list style="padding-top: 10px">
     <ion-card ion-item *ngFor="let p of item.list; let i = index" no-lines style="background-image: none" >
