--- a/src/pages/week-menu/week-menu.html
+++ b/src/pages/week-menu/week-menu.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-list no-lines *ngFor="let item of productList">
     <ion-list-header class="header-title">
       {{item?.date}}
