--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -28,7 +28,7 @@
       <ion-row>
         <ion-col col-3>
           <p>4月</p>
-          <p style="font-weight: bold;font-size: 1.3em">24日</p>
+          <p style="margin-left: -10px;font-weight: bold;font-size: 1.3em">24日</p>
         </ion-col>
         <ion-col col-6>
           <h1>今天</h1>
