--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,7 +26,7 @@
   <!--<div id="text">-->
     <!--&lt;!&ndash;{{text}}&ndash;&gt;-->
   <!--</div>-->
-  <ion-card>
+  <ion-card (click)="gotoWaitingUse()">
     <ion-card-header>
       今日您已预订
     </ion-card-header>
