--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -39,15 +39,15 @@
         </div>
       </ion-item>
       <ion-item-options side="right">
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="pack()">
           <ion-icon name="ios-cube-outline"></ion-icon>
           打包
         </button>
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="holdOrder()">
           <ion-icon name="ios-hand-outline"></ion-icon>
           留餐
         </button>
-        <button class="operator-button" ion-button color="danger" (click)="unread(item)">
+        <button class="operator-button" ion-button color="danger" (click)="cancelOrder()">
           <ion-icon name="ios-trash-outline"></ion-icon>
           退订
         </button>
@@ -68,15 +68,15 @@
         </div>
       </ion-item>
       <ion-item-options side="right">
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="pack()">
           <ion-icon name="ios-cube-outline"></ion-icon>
           打包
         </button>
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="holdOrder()">
           <ion-icon name="ios-hand-outline"></ion-icon>
           留餐
         </button>
-        <button class="operator-button" ion-button color="danger" (click)="unread(item)">
+        <button class="operator-button" ion-button color="danger" (click)="cancelOrder()">
           <ion-icon name="ios-trash-outline"></ion-icon>
           退订
         </button>
@@ -98,15 +98,15 @@
         </div>
       </ion-item>
       <ion-item-options side="right">
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="pack()">
           <ion-icon name="ios-cube-outline"></ion-icon>
           打包
         </button>
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="holdOrder()">
           <ion-icon name="ios-hand-outline"></ion-icon>
           留餐
         </button>
-        <button class="operator-button" ion-button color="danger" (click)="unread(item)">
+        <button class="operator-button" ion-button color="danger" (click)="cancelOrder()">
           <ion-icon name="ios-trash-outline"></ion-icon>
           退订
         </button>
@@ -128,15 +128,15 @@
         </div>
       </ion-item>
       <ion-item-options side="right">
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="pack()">
           <ion-icon name="ios-cube-outline"></ion-icon>
           打包
         </button>
-        <button class="operator-button" color="light" ion-button (click)="unread(item)">
+        <button class="operator-button" color="light" ion-button (click)="holdOrder()">
           <ion-icon name="ios-hand-outline"></ion-icon>
           留餐
         </button>
-        <button class="operator-button" ion-button color="danger" (click)="unread(item)">
+        <button class="operator-button" ion-button color="danger" (click)="cancelOrder()">
           <ion-icon name="ios-trash-outline"></ion-icon>
           退订
         </button>
