--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
   <ion-list no-lines>
-    <button ion-item  (click)="openPage('listPage')">
+    <button ion-item  (click)="openPersonInfo()">
       个人信息
     </button>
     <button ion-item  (click)="openPage('listPage')">
