--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -21,7 +21,7 @@
     <button ion-item  (click)="openPage('listPage')">
       语言
     </button>
-    <button ion-item  (click)="openPage('listPage')">
+    <button ion-item  (click)="openSelectLocation()">
       地区位置
     </button>
     <button ion-item  (click)="openPage('listPage')">
