--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -44,6 +44,9 @@
       <button ion-item  (click)="openPage('listPage')">
         新闻
       </button>
+      <button ion-item  (click)="gotoLogin()">
+        登录页面
+      </button>
     </ion-list>
   </ion-list>
 </ion-content>
