--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -47,6 +47,9 @@
       <button ion-item  (click)="gotoLogin()">
         登录页面
       </button>
+      <button ion-item  (click)="gotoTest()">
+        测试页
+      </button>
     </ion-list>
   </ion-list>
 </ion-content>
