--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -18,6 +18,9 @@
     <button ion-item  (click)="openPersonInfo()">
       个人信息
     </button>
+    <button ion-item  (click)="openRechargePage()">
+      充值
+    </button>
     <button ion-item  (click)="openPage('listPage')">
       语言
     </button>
@@ -42,6 +45,8 @@
     </button>
     <button ion-item  (click)="openPage('listPage')">
       法律法规
+    </button><button ion-item  (click)="openAboutPage()">
+      关于我们
     </button>
   </ion-list>
   <ion-list no-lines>
