--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -9,7 +9,7 @@
     <ion-title>
       <div>
         <span>Jimmy</span><br/>
-        <span>欢迎来到</span>
+        <span>欢迎来到{{factoryName}}</span>
       </div>
     </ion-title>
     <ion-buttons end>
@@ -52,25 +52,10 @@
     </ion-calendar>
 
   </ion-card>
-  <ion-card  class="ion-card-prod"  no-lines >
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">早餐</div>
+  <ion-card *ngFor="let item of typeList"  class="ion-card-prod"  no-lines (click)="gotoSelectTypePage(item.value, factoryName)">
+    <img src="{{item.imgUrl}}"/>
+    <div class="card-title">{{item.label}}</div>
   </ion-card>
-  <ion-card  class="ion-card-prod"  no-lines >
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">午餐</div>
-  </ion-card>
-  <ion-card  class="ion-card-prod"  no-lines >
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">晚餐</div>
-  </ion-card>
-  <ion-card  class="ion-card-prod"  no-lines >
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">宵夜</div>
-  </ion-card>
-  <ion-card  class="ion-card-prod"  no-lines >
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">水吧</div>
-  </ion-card>
+
 
 </ion-content>
