--- a/src/pages/week-menu-type/week-menu-type.html
+++ b/src/pages/week-menu-type/week-menu-type.html
@@ -14,21 +14,21 @@
 
 
 <ion-content>
-  <span style="font-size: 1.5rem;font-weight: bold;padding: 16px">{{item?.date}}</span>
+  <span style="font-size: 1.8rem;font-weight: bold;padding: 16px;line-height: 60px">{{todayStr}}</span>
 
   <ion-list style="padding-top: 10px">
-    <ion-card ion-item *ngFor="let p of item.list; let i = index" no-lines style="background-image: none" >
-      <ion-card-header (click)="accordion(i)">
+    <ion-card ion-item *ngFor="let item of typeList; let i = index" no-lines style="background-image: none" >
+      <ion-card-header (click)="accordion(item.value)">
 
-        <span style="font-size: 1.5rem;font-weight: bold">{{p?.typeName}}</span>
-        <ion-icon name="ios-arrow-up-outline"  *ngIf="i === currentIndex" style="margin-left: 80%" ></ion-icon>
+        <span style="font-size: 1.5rem;font-weight: bold">{{item?.label}}</span>
+        <ion-icon name="ios-arrow-up-outline"  *ngIf="item.value === value" style="margin-left: 80%" ></ion-icon>
       </ion-card-header>
 
       <!--<ion-icon name="ios-arrow-forward" item-right *ngIf="!(item.status)" ></ion-icon>-->
-      <ion-list *ngIf="i === currentIndex">
-        <ion-card class="type-list-card" *ngFor=" let typeItem of p.foodType; let typeIndex = index" (click)="gotoTypeDetail(p.typeName, item.date, typeItem)">
-          <img src="{{typeItem?.img}}"/>
-          <div class="card-title">{{typeItem?.name}}</div>
+      <ion-list *ngIf="item.value === value">
+        <ion-card class="type-list-card"  *ngFor=" let p of typeObj[item.value]; let typeIndex = index" (click)="gotoTypeDetail(p.name, item.value, item.label, p.id)">
+          <img src="{{p?.imgUrl}}"/>
+          <div class="card-title">{{p?.name}}</div>
           <!--<div class="card-subtitle">64 Listings</div>-->
         </ion-card>
       </ion-list>
