--- a/src/pages/week-menu/week-menu.html
+++ b/src/pages/week-menu/week-menu.html
@@ -21,13 +21,13 @@
 <ion-content>
   <ion-list no-lines *ngFor="let item of productList">
     <ion-list-header class="header-title">
-      {{item?.date}}
+      {{item?.todayStr}}
     </ion-list-header>
     <ion-row>
       <ion-col col-6 *ngFor="let p of item.list; let i = index">
-        <ion-card (click)="gotoMenuType(item, i)">
-          <img src="{{p?.img}}"/>
-          <div class="card-title">{{p?.typeName}}</div>
+        <ion-card (click)="gotoMenuType(p.value, item?.todayStr, item.list, item.monStr, item.dayStr)">
+          <img src="{{p?.imgUrl}}"/>
+          <div class="card-title">{{p?.label}}</div>
           <!--<div class="card-subtitle">64 Listings</div>-->
         </ion-card>
       </ion-col>
