--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -30,7 +30,7 @@
     <button ion-button block>登陆</button>
   </div>
   <div padding>
-    <span (click)="openForgetPwd()" class="forget-pwd">忘记密码</span>
+    <span tappable (click)="openForgetPwd()" class="forget-pwd">忘记密码</span>
   </div>
   <div class="bottom-tips" padding>
     <p>
