--- a/src/pages/select-location/select-location.html
+++ b/src/pages/select-location/select-location.html
@@ -8,38 +8,34 @@
 
 
 <ion-content padding>
-  <ion-list radio-group [(ngModel)]="location" (ionChange)="changeValue($event)">
-    <ion-list-header>
-      <span>GLE</span>
+  <ion-list radio-group *ngFor="let item of factoryList; let i = index" [(ngModel)]="location" (ionChange)="changeValue($event)">
+    <ion-list-header tappable (click)="accordion(i)">
+      <span>{{item.title}}</span>
+      <ion-icon name="ios-arrow-up-outline" *ngIf="i === currentIndex"  style="margin-left: 80%" ></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" *ngIf="i !== currentIndex"  style="margin-left: 80%" ></ion-icon>
     </ion-list-header>
-    <div>
-      <ion-item>
-        <ion-label>十如</ion-label>
-        <ion-radio value="1001" item-end></ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-label>瓦窑</ion-label>
-        <ion-radio value="1002"  item-end></ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-label>秧塘</ion-label>
-        <ion-radio value="1003"  item-end></ion-radio>
-      </ion-item>
-    </div>
-    <ion-list-header>
-      <span>GET</span>
-    </ion-list-header>
-    <ion-item>
-      <ion-label>十如</ion-label>
-      <ion-radio  value="1004" item-end></ion-radio>
-    </ion-item>
-    <ion-item>
-      <ion-label>十如</ion-label>
-      <ion-radio value="1005"  item-end></ion-radio>
-    </ion-item>
-    <ion-item>
-      <ion-label>十如</ion-label>
-      <ion-radio value="1006"  item-end></ion-radio>
-    </ion-item>
-  </ion-list>
+   <div *ngIf="i === currentIndex">
+     <ion-item *ngFor="let p of item.list">
+       <ion-label>{{p.name}}</ion-label>
+       <ion-radio value="{{p.id}}" (click)="setValue(p.id, p.name)" item-end></ion-radio>
+     </ion-item>
+   </div>
+  </ion-list >
+  <!--<ion-list radio-group [(ngModel)]="location" (ionChange)="changeValue($event)">-->
+    <!--<ion-list-header>-->
+      <!--<span>GET</span>-->
+    <!--</ion-list-header>-->
+    <!--<ion-item>-->
+      <!--<ion-label>十如</ion-label>-->
+      <!--<ion-radio  value="1004" item-end></ion-radio>-->
+    <!--</ion-item>-->
+    <!--<ion-item>-->
+      <!--<ion-label>十如</ion-label>-->
+      <!--<ion-radio value="1005"  item-end></ion-radio>-->
+    <!--</ion-item>-->
+    <!--<ion-item>-->
+      <!--<ion-label>十如</ion-label>-->
+      <!--<ion-radio value="1006"  item-end></ion-radio>-->
+    <!--</ion-item>-->
+  <!--</ion-list>-->
 </ion-content>
