--- a/src/pages/week-menu-type/week-menu-type.html
+++ b/src/pages/week-menu-type/week-menu-type.html
@@ -22,6 +22,7 @@
 
         <span style="font-size: 1.5rem;font-weight: bold">{{item?.label}}</span>
         <ion-icon name="ios-arrow-up-outline"  *ngIf="item.value === value" style="margin-left: 80%" ></ion-icon>
+        <ion-icon name="ios-arrow-forward-outline"  *ngIf="item.value !== value" style="margin-left: 80%" ></ion-icon>
       </ion-card-header>
 
       <!--<ion-icon name="ios-arrow-forward" item-right *ngIf="!(item.status)" ></ion-icon>-->
