--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -28,22 +28,22 @@
       <button ion-item  (click)="openOverdue()">
         逾期未取餐
       </button>
-      <button ion-item  (click)="openPage('listPage')">
-        我的积分
-        <ion-note clear item-end>
-          16分
-        </ion-note>
-      </button>
-      <button ion-item  (click)="openPage('listPage')">
-        我的营养管理
-      </button>
-      <button ion-item  (click)="openPage('listPage')">
-        我的消息
-        <ion-badge item-end>3</ion-badge>
-      </button>
-      <button ion-item  (click)="openPage('listPage')">
-        新闻
-      </button>
+      <!--<button ion-item  (click)="openPage('listPage')">-->
+        <!--我的积分-->
+        <!--<ion-note clear item-end>-->
+          <!--16分-->
+        <!--</ion-note>-->
+      <!--</button>-->
+      <!--<button ion-item  (click)="openPage('listPage')">-->
+        <!--我的营养管理-->
+      <!--</button>-->
+      <!--<button ion-item  (click)="openPage('listPage')">-->
+        <!--我的消息-->
+        <!--<ion-badge item-end>3</ion-badge>-->
+      <!--</button>-->
+      <!--<button ion-item  (click)="openPage('listPage')">-->
+        <!--新闻-->
+      <!--</button>-->
       <button ion-item  (click)="gotoLogin()">
         登录页面
       </button>
