--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -27,25 +27,26 @@
     <button ion-item  (click)="openSelectLocation()">
       地区位置
     </button>
-    <button ion-item  (click)="openPage('listPage')">
-      反馈
-    </button>
-    <button ion-item  (click)="openPage('listPage')">
-      用户指南
-      <!--<ion-badge item-end>3</ion-badge>-->
-    </button>
-    <button ion-item  (click)="openPage('listPage')">
-      版本信息
-      <ion-note clear item-end>
-        1.0.0版本
-      </ion-note>
-    </button>
-    <button ion-item  (click)="openPage('listPage')">
-      隐私政策
-    </button>
-    <button ion-item  (click)="openPage('listPage')">
-      法律法规
-    </button><button ion-item  (click)="openAboutPage()">
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--反馈-->
+    <!--</button>-->
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--用户指南-->
+      <!--&lt;!&ndash;<ion-badge item-end>3</ion-badge>&ndash;&gt;-->
+    <!--</button>-->
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--版本信息-->
+      <!--<ion-note clear item-end>-->
+        <!--1.0.0版本-->
+      <!--</ion-note>-->
+    <!--</button>-->
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--隐私政策-->
+    <!--</button>-->
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--法律法规-->
+    <!--</button>-->
+    <button ion-item  (click)="openAboutPage()">
       关于我们
     </button>
   </ion-list>
