--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -66,7 +66,9 @@
       新闻
     </div>
   </ion-card>
+  <qr-code [value]="'1231234'" [size]="150" [backgroundAlpha]="0.5" [padding]="10"></qr-code>
 </ion-content>
+
 
 <!--<ion-content padding>-->
   <!--&lt;!&ndash;<h2>Expense List</h2>&ndash;&gt;-->
